// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kpi-alarms-filters Renders \`kpi-alarms-filters\` with hour sampling 1`] = `
<div
  class="kpi-alarms-toolbar"
>
  <div
    class="layout ml-4 my-4 wrap"
  >
    <c-quick-date-interval-field-stub
      class="mr-4"
      min="1354899600"
      value="[object Object]"
    />
    <c-sampling-field-stub
      class="mr-4 kpi-alarms-toolbar__sampling"
      value="hour"
    />
    <c-filter-field-stub
      class="mr-4 kpi-alarms-toolbar__filters"
    />
    <c-alarm-metric-parameters-field-stub
      class="kpi-alarms-toolbar__parameters"
      value="ticket_active_alarms,ack_alarms"
    />
  </div>
</div>
`;

exports[`kpi-alarms-filters Renders \`kpi-alarms-filters\` with hour sampling and normal interval 1`] = `
<div
  class="kpi-alarms-toolbar"
>
  <div
    class="layout ml-4 my-4 wrap"
  >
    <c-quick-date-interval-field-stub
      class="mr-4"
      min="1354899601"
      value="[object Object]"
    />
    <c-sampling-field-stub
      class="mr-4 kpi-alarms-toolbar__sampling"
      value="hour"
    />
    <c-filter-field-stub
      class="mr-4 kpi-alarms-toolbar__filters"
    />
    <c-alarm-metric-parameters-field-stub
      class="kpi-alarms-toolbar__parameters"
      value="ticket_active_alarms,ack_alarms"
    />
  </div>
</div>
`;

exports[`kpi-alarms-filters Renders \`kpi-alarms-filters\` with query 1`] = `
<div
  class="kpi-alarms-toolbar"
>
  <div
    class="layout ml-4 my-4 wrap"
  >
    <c-quick-date-interval-field-stub
      class="mr-4"
      value="[object Object]"
    />
    <c-sampling-field-stub
      class="mr-4 kpi-alarms-toolbar__sampling"
      value="day"
    />
    <c-filter-field-stub
      class="mr-4 kpi-alarms-toolbar__filters"
    />
    <c-alarm-metric-parameters-field-stub
      class="kpi-alarms-toolbar__parameters"
      value="ticket_active_alarms,ack_alarms"
    />
  </div>
</div>
`;
